--- a/templates/Solrsearch-Block-Searchform-Success.all.all.html
+++ b/templates/Solrsearch-Block-Searchform-Success.all.all.html
@@ -1,4 +1,4 @@
-<form method="get" tal:attributes="action formAction">
+<form class="cmxform" method="get" tal:attributes="action formAction">
 <p>
 	<label class="hidden" for="solrsearch" change:translate="&modules.solrsearch.frontoffice.Search-inputlabel;"/>
 	<input class="textfield" type="text" id="solrsearch" tal:attributes="name termsParameterName; value terms" change:i18nattr="empty &modules.solrsearch.frontoffice.Search-button-title;"/>
