[NEW] New form and result blocks. [DEPRECATE] Deprecate searchform and searchresult blocks. [NEW] Minimal implementation of OpenSearch. [NEW] Enable to specify result template by document.

--- a/style/frontoffice.css
+++ b/style/frontoffice.css
@@ -1,4 +1,5 @@
-.modules-solrsearch-searchform form.cmxform label{
+.modules-solrsearch-searchform form.cmxform label,
+.modules-solrsearch-form form.cmxform label{
 	color: #000/*@var searchlabelfgcolor*/;
 	width: 57%;
 }
