--- a/templates/Solrsearch-Block-Form-Success.all.all.html
+++ b/templates/Solrsearch-Block-Form-Success.all.all.html
@@ -1,3 +1,17 @@
+<script type="text/javascript" tal:condition="doCompletion">
+function complete(field, fieldOp, fieldName) {
+	var url = '/index.php?module=solrsearch&action=Complete&lang=${lang}';
+	if (fieldName != null) {
+		url += "&fieldName="+fieldName;
+	}
+	jQuery(field).autocomplete(url, {delay: 150, cacheLength : 1, max : 30, matchSubset: false, formatItem : function(result, index, count, term) { return result[0]+" ("+result[1]+")"; } });
+}
+
+jQuery(document).ready(function() {
+	var simpleField = document.getElementById('solrsearch');
+	complete(simpleField, "AND", "aggregateText");
+});
+</script>
 <form class="cmxform" method="${configuration/getSubmitMethod}" action="${formAction}">
 	<p>
 		<label class="hidden" for="solrsearch" change:translate="&modules.solrsearch.frontoffice.Search-inputlabel;"></label>
