--- a/templates/Solrsearch-Block-Results-Success.all.all.html
+++ b/templates/Solrsearch-Block-Results-Success.all.all.html
@@ -2,15 +2,19 @@
 
 <ul class="solrsearch-results-header" tal:condition="not: noHits">
 	<li class="count"><h4 change:h="" tal:content="resultsHeader | default"></h4></li>
-	<div tal:condition="exists: documentModelFacet">
-		<ol class="solrsearch-documentmodel-facet">
-	        <li tal:repeat="facetCount documentModelFacet"><a change:currentPageLink="solrsearchParam[documentModel] repeat/facetCount/key">${facetCount/getValue} (${php: number_format(facetCount.getCount(), 0, ',', ' ')})</a></li>
-    	</ol>
-    </div>
-   	<p class="normal solrsearch-results-filters" tal:condition="php: isset(documentModel) && documentModel != ''">
-    	<span change:translate="modules.solrsearch.frontoffice.DocumentModelFilterLabel" />
-        ${documentModelLabel} <a change:currentPageLink="solrsearchParam[documentModel] ''" change:translate="modules.solrsearch.frontoffice.RemoveDocumentModelFilter" change:i18nattr="title &modules.solrsearch.frontoffice.RemoveDocumentModelFilterTitle;">enlever</a>
-    </p>
+	<li class="facet" tal:condition="exists: documentModelFacet">
+		<div>
+			<ol class="solrsearch-documentmodel-facet">
+		        <li tal:repeat="facetCount documentModelFacet"><a change:currentPageLink="solrsearchParam[documentModel] repeat/facetCount/key">${facetCount/getValue} (${php: number_format(facetCount.getCount(), 0, ',', ' ')})</a></li>
+	    	</ol>
+	    </div>
+    </li>
+   	<li class="filters" tal:condition="php: isset(documentModel) && documentModel != ''">
+	   	<p class="normal solrsearch-results-filters">
+	    	<span change:translate="modules.solrsearch.frontoffice.DocumentModelFilterLabel"></span>
+	        ${documentModelLabel} <a change:currentPageLink="solrsearchParam[documentModel] ''" change:translate="modules.solrsearch.frontoffice.RemoveDocumentModelFilter" change:i18nattr="title &modules.solrsearch.frontoffice.RemoveDocumentModelFilterTitle;">enlever</a>
+	    </p>
+    </li>
 	<li class="sorting">
 		<tal:block change:translate="modules.solrsearch.frontoffice.Sort-byLabel" />
 		<ol>
