--- a/templates/Solrsearch-Block-Searchresults.all.all.html
+++ b/templates/Solrsearch-Block-Searchresults.all.all.html
@@ -32,7 +32,7 @@
 		<tal:block tal:define="global documentclass item/getResultType" />
 		<li tal:define="liclass string:$documentclass $posclass" tal:attributes="class liclass">
 			<h3 class="title">
-				<img tal:attributes="alt item/getGauge/getAltText; src item/getGauge/getImageUrl; class item/getGauge/getClassName"/>
+				<img change:gauge="item/getNormalizedScore" />
 				<a class="link" tal:condition="not: item/isMedia" change:link="document item/getDocument">
 					<strong tal:content="item/getHighlightedLabel"></strong>
 				</a>	
