--- a/style/frontoffice.css
+++ b/style/frontoffice.css
@@ -1,6 +1,6 @@
 .modules-solrsearch-searchform form.cmxform label,
 .modules-solrsearch-form form.cmxform label{
-	color: #000/*@var searchlabelfgcolor*/;
+	color: #000;
 	width: 57%;
 }
 ul.solrsearch-results-header{
@@ -33,6 +33,7 @@ ol.solrsearch-documentmodel-facet li {
   display: inline;
   margin-right: 10px;
 }
+
 ol.solrsearch-documentmodel-facet {
   margin-bottom: 10px;
 }
