--- a/templates/Solrsearch-Inc-DefaultResultDetail.all.all.html
+++ b/templates/Solrsearch-Inc-DefaultResultDetail.all.all.html
@@ -1,4 +1,4 @@
 <p>
-	<strong change:translate="modules.solrsearch.frontoffice.DescriptionLabel"></strong>
-	${item/getHighlightedText}<span change:translate="modules.solrsearch.frontoffice.End-descriptionEllipsis"></span>		
+	<strong>${trans:m.solrsearch.frontoffice.description,lab,ucf}</strong>
+	${item/getHighlightedText}<span>${trans:m.solrsearch.frontoffice.end-description,ucf,etc}</span>		
 </p>
