--- a/templates/Solrsearch-Inc-DefaultResultDetail.all.all.html
+++ b/templates/Solrsearch-Inc-DefaultResultDetail.all.all.html
@@ -1,4 +1,22 @@
-<p>
-	<strong>${trans:m.solrsearch.frontoffice.description,lab,ucf}</strong>
-	${item/getHighlightedText}<span>${trans:m.solrsearch.frontoffice.end-description,ucf,etc}</span>		
-</p>
+<p class="normal">${item/getHighlightedText}<span>${trans:m.solrsearch.frontoffice.end-description,ucf,etc}</span></p>
+<dl class="inline-list" tal:define="doc item/getDocument" tal:condition="php: showTypes OR showDates">
+	<tal:block tal:condition="showTypes">
+		<dt>${trans:m.solrsearch.frontoffice.type,ucf}</dt> 
+		<dd>
+			<tal:block tal:condition="item/hasTypeLabel">${item/getTypeLabel}</tal:block>
+			<tal:block tal:condition="not:item/hasTypeLabel">${php: LocaleService::getInstance().transFO(item.getDocument().getDocumentModel().getLabelKey(), array('ucf'))}</tal:block>
+			<span tal:condition="showDates"> - </span>
+		</dd>
+	</tal:block>
+	<tal:block tal:condition="showDates">
+		<dt>${trans:m.solrsearch.frontoffice.creationdate,ucf}</dt>
+		<tal:block tal:condition="php: item.getDocument().getCreationDate() >= item.getDocument().getModificationDate()">
+			<dd><tal:block change:datetime="doc/getCreationDate; formatI18n framework.datetime.short" /></dd>
+		</tal:block>
+		<tal:block tal:condition="php: item.getDocument().getCreationDate() < item.getDocument().getModificationDate()">
+			<dd><tal:block change:datetime="doc/getCreationDate; formatI18n framework.datetime.short" /><span> - </span></dd>
+			<dt>${trans:m.solrsearch.frontoffice.modificationdate,ucf}</dt>
+			<dd><tal:block change:datetime="doc/getModificationDate; formatI18n framework.datetime.short" /></dd>
+		</tal:block>
+	</tal:block>
+</dl>
