--- a/templates/Solrsearch-Inc-DefaultResultDetail.all.all.html
+++ b/templates/Solrsearch-Inc-DefaultResultDetail.all.all.html
@@ -10,13 +10,13 @@
 	</tal:block>
 	<tal:block tal:condition="showDates">
 		<dt>${trans:m.solrsearch.frontoffice.creationdate,ucf}</dt>
-		<tal:block tal:condition="php: item.getDocument().getCreationDate() >= item.getDocument().getModificationDate()">
-			<dd><tal:block change:datetime="doc/getCreationDate; formatI18n framework.datetime.short" /></dd>
+		<tal:block tal:condition="php: item.getDocument().getCreationdate() >= item.getDocument().getModificationdate()">
+			<dd><tal:block change:datetime="value doc/getCreationdate; format 'classic'" /></dd>
 		</tal:block>
-		<tal:block tal:condition="php: item.getDocument().getCreationDate() < item.getDocument().getModificationDate()">
-			<dd><tal:block change:datetime="doc/getCreationDate; formatI18n framework.datetime.short" /><span> - </span></dd>
+		<tal:block tal:condition="php: item.getDocument().getCreationdate() < item.getDocument().getModificationdate()">
+			<dd><tal:block change:datetime="value doc/getCreationdate; format 'classic'" /><span> - </span></dd>
 			<dt>${trans:m.solrsearch.frontoffice.modificationdate,ucf}</dt>
-			<dd><tal:block change:datetime="doc/getModificationDate; formatI18n framework.datetime.short" /></dd>
+			<dd><tal:block change:datetime="value doc/getModificationDate; format 'classic'" /></dd>
 		</tal:block>
 	</tal:block>
 </dl>
