--- a/templates/Solrsearch-Block-Form-Success.all.all.html
+++ b/templates/Solrsearch-Block-Form-Success.all.all.html
@@ -17,8 +17,10 @@ jQuery(document).ready(function() {
 </script>
 <form class="cmxform" tal:attributes="method configuration/getSubmitMethod" action="${formAction}">
 	<p>
-		<label class="hidden" for="solrsearch" change:translate="modules.solrsearch.frontoffice.Search-inputlabel"></label>
-		<input class="textfield" type="text" id="solrsearch" name="${configuration/getModule}Param[terms]" value="${terms}" change:i18nattr="empty &modules.solrsearch.frontoffice.Search-button-title;" />
-		<input class="button" type="submit" name="submit" change:i18nattr="value &modules.solrsearch.frontoffice.Search-button-ok;" />
+		<label class="hidden" for="solrsearch">${trans:m.solrsearch.frontoffice.search-input,ucf,lab}</label>
+		<input class="textfield" type="text" id="solrsearch" name="${configuration/getModule}Param[terms]" value="${terms}" 
+			empty="${trans:m.solrsearch.frontoffice.search-button-title,ucf,attr}" />
+		<input class="button" type="submit" name="submit" 
+			value="${trans:m.solrsearch.frontoffice.search-button-ok,ucf,attr}" />
 	</p>
 </form>
