--- a/templates/Solrsearch-Block-Results-Success.all.all.html
+++ b/templates/Solrsearch-Block-Results-Success.all.all.html
@@ -5,23 +5,23 @@
 		<tal:block tal:condition="byScore">
 			<strong>${trans:m.solrsearch.frontoffice.sort-by-score,ucf}</strong>
 			<span> | </span>
-			<a class="link" change:currentPageLink="byDateParams">${trans:m.solrsearch.frontoffice.sort-by-date,ucf}</a>
+			<a class="link" change:currentpagelink="byDateParams">${trans:m.solrsearch.frontoffice.sort-by-date,ucf}</a>
 		</tal:block>
 		<tal:block tal:condition="not: byScore">
-			<a class="link" change:currentPageLink="byScoreParams">${trans:m.solrsearch.frontoffice.sort-by-score,ucf}</a>
+			<a class="link" change:currentpagelink="byScoreParams">${trans:m.solrsearch.frontoffice.sort-by-score,ucf}</a>
 			<span> | </span>
 			<strong>${trans:m.solrsearch.frontoffice.sort-by-date,ucf}</strong>
 		</tal:block>
 	</p>
 	<p tal:condition="exists: documentModelFacet" class="normal">
 		<tal:block tal:repeat="facetCount documentModelFacet">
-			<a change:currentPageLink="solrsearchParam[documentModel] repeat/facetCount/key">${facetCount/getValue} (${php: number_format(facetCount.getCount(), 0, ',', ' ')})</a>
+			<a change:currentpagelink="solrsearchParam[documentModel] repeat/facetCount/key">${facetCount/getValue} (${php: number_format(facetCount.getCount(), 0, ',', ' ')})</a>
 			<span tal:condition="not: repeat/facetCount/end" > | </span>
 		</tal:block>
 	</p>
 	<p tal:condition="php: isset(documentModel) && documentModel != ''" class="normal">
 		${trans:m.solrsearch.frontoffice.documentmodelfilter,ucf,lab}
-		${documentModelLabel} <span class="small">(<a change:currentPageLink="solrsearchParam[documentModel] ''" title="${trans:m.solrsearch.frontoffice.removedocumentmodelfiltertitle,ucf}">${trans:m.solrsearch.frontoffice.removedocumentmodelfilter,ucf}</a>)</span>
+		${documentModelLabel} <span class="small">(<a change:currentpagelink="solrsearchParam[documentModel] ''" title="${trans:m.solrsearch.frontoffice.removedocumentmodelfiltertitle,ucf}">${trans:m.solrsearch.frontoffice.removedocumentmodelfilter,ucf}</a>)</span>
 	</p>
 </tal:block>
 
@@ -32,7 +32,7 @@
 
 <p tal:condition="exists: suggestionParams/solrsearchParam" class="normal">
 	${trans:m.solrsearch.frontoffice.search-suggestions,ucf,lab}
-	<a class="link" change:currentPageLink="suggestionParams" tal:content="suggestionParams/solrsearchParam/terms"></a>
+	<a class="link" change:currentpagelink="suggestionParams" tal:content="suggestionParams/solrsearchParam/terms"></a>
 </p>
 
 <ol class="document-list">
