--- a/templates/Solrsearch-Block-Results-Error.all.all.html
+++ b/templates/Solrsearch-Block-Results-Error.all.all.html
@@ -1,2 +1,2 @@
-<h2 change:h="" change:translate="modules.solrsearch.frontoffice.Search-result-title"></h2>
+<h2 change:h="" tal:content="trans:m.solrsearch.frontoffice.search-result-title,ucf"></h2>
 <ul change:errors=""></ul>
