--- a/templates/Solrsearch-Inc-DefaultResultDetail.all.all.html
+++ b/templates/Solrsearch-Inc-DefaultResultDetail.all.all.html
@@ -11,12 +11,12 @@
 	<tal:block tal:condition="showDates">
 		<dt>${trans:m.solrsearch.frontoffice.creationdate,ucf}</dt>
 		<tal:block tal:condition="php: item.getDocument().getCreationdate() >= item.getDocument().getModificationdate()">
-			<dd><tal:block change:datetime="value doc/getCreationdate; format 'classic'" /></dd>
+			<dd><tal:block tal:replace="datetime:doc/getCreationdate,from=gmt" /></dd>
 		</tal:block>
 		<tal:block tal:condition="php: item.getDocument().getCreationdate() < item.getDocument().getModificationdate()">
-			<dd><tal:block change:datetime="value doc/getCreationdate; format 'classic'" /><span> - </span></dd>
+			<dd><tal:block tal:replace="datetime:doc/getCreationdate,from=gmt" /><span> - </span></dd>
 			<dt>${trans:m.solrsearch.frontoffice.modificationdate,ucf}</dt>
-			<dd><tal:block change:datetime="value doc/getModificationDate; format 'classic'" /></dd>
+			<dd><tal:block tal:replace="datetime:doc/getModificationDate,from=gmt" /></dd>
 		</tal:block>
 	</tal:block>
 </dl>
