--- a/templates/Solrsearch-Action-GetOpenSearch-Success.all.all.xml
+++ b/templates/Solrsearch-Action-GetOpenSearch-Success.all.all.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <OpenSearchDescription xmlns="http://a9.com/-/spec/opensearch/1.1/" xmlns:moz="http://www.mozilla.org/2006/browser/search/">
-	<ShortName>${website/getLabelAsHtml}</ShortName>
-	<Description>${website/getDescriptionAsHtml}</Description>
+	<ShortName>${website/getLabel}</ShortName>
+	<Description>${structure website/getDescriptionAsHtml}</Description>
 	<InputEncoding>UTF-8</InputEncoding>
 	<Image width="16" height="16" type="${website/getFaviconMimeType}">${website/getFaviconUrl}</Image>
 	<Url type="text/html" method="GET" template="${submitUrl}">
