--- a/templates/Solrsearch-Block-Form-Success.all.all.html
+++ b/templates/Solrsearch-Block-Form-Success.all.all.html
@@ -18,7 +18,7 @@ jQuery(document).ready(function() {
 <form class="cmxform" tal:attributes="method configuration/getSubmitMethod" action="${formAction}">
 	<p>
 		<label class="hidden" for="solrsearch">${trans:m.solrsearch.frontoffice.search-input,ucf,lab}</label>
-		<input class="textfield" type="text" id="solrsearch" name="${configuration/getModule}Param[terms]" value="${terms}" 
+		<input class="textfield" type="text" id="solrsearch" name="solrsearchParam[terms]" value="${terms}" 
 			empty="${trans:m.solrsearch.frontoffice.search-button-title,ucf,attr}" />
 		<input class="button" type="submit" name="submit" 
 			value="${trans:m.solrsearch.frontoffice.search-button-ok,ucf,attr}" />
