--- a/templates/Solrsearch-Block-Form-Success.all.all.html
+++ b/templates/Solrsearch-Block-Form-Success.all.all.html
@@ -16,10 +16,10 @@ jQuery(document).ready(function() {
 /* ]]> */
 </script>
 <form class="cmxform" tal:attributes="method configuration/getSubmitMethod" action="${formAction}">
-	<p>
+	<fieldset>
 		<label class="hidden" for="solrsearch">${trans:m.solrsearch.frontoffice.search-input,lab,ucf}</label>
 		<input class="textfield" type="text" id="solrsearch" name="${configuration/getModule}Param[terms]" value="${terms}" 
 			empty="${trans:m.solrsearch.frontoffice.search-button-title,ucf,attr}" />
 		<input class="button" type="submit" name="submit" value="${trans:m.solrsearch.frontoffice.search-button-ok,ucf,attr}" />
-	</p>
+	</fieldset>
 </form>
