--- a/templates/Solrsearch-Block-Results-Error.all.all.html
+++ b/templates/Solrsearch-Block-Results-Error.all.all.html
@@ -1,2 +1,2 @@
-<h2 change:h="" change:translate="modules.solrsearch.frontoffice.Search-result-title"></h2>
+<h1 change:h="">${trans:m.solrsearch.frontoffice.search-result-title,ucf}</h1>
 <ul change:errors=""></ul>
