--- a/templates/Solrsearch-Block-Form-Success.all.all.html
+++ b/templates/Solrsearch-Block-Form-Success.all.all.html
@@ -1,25 +1,39 @@
-<script type="text/javascript" tal:condition="doCompletion">
-/* <![CDATA[ */
-function solrsearch_complete(field, fieldOp, fieldName) {
-	var limit = 30;
-	var url = '/index.php?module=solrsearch&action=Complete&lang=${lang}&limit='+limit+'&op='+fieldOp;
-	if (fieldName != null) {
-		url += "&fieldName="+fieldName;
-	}
-	jQuery(field).autocomplete(url, {delay: 150, cacheLength : 1, max : limit, matchSubset: false, formatItem : function(result, index, count, term) { return result[0]+" ("+result[1]+")"; } });
-}
-
-jQuery(document).ready(function() {
-	var simpleField = document.getElementById('solrsearch');
-	solrsearch_complete(simpleField, "AND", "aggregateText");
-});
-/* ]]> */
-</script>
 <form class="cmxform" tal:attributes="method configuration/getSubmitMethod" action="${formAction}">
-	<fieldset>
+	<fieldset class="solrsearch-fieldset">
 		<label class="hidden" for="solrsearch">${trans:m.solrsearch.frontoffice.search-input,lab,ucf}</label>
 		<input class="textfield" type="text" id="solrsearch" name="${configuration/getModule}Param[terms]" value="${terms}" 
 			empty="${trans:m.solrsearch.frontoffice.search-button-title,ucf,attr}" />
 		<input class="button" type="submit" name="submit" value="${trans:m.solrsearch.frontoffice.search-button-ok,ucf,attr}" />
 	</fieldset>
 </form>
+<tal:block tal:condition="configuration/getComplete">
+	<script change:javascript="head 'modules.website.lib.js.jquery-ui-autocomplete'"></script>
+	<script type="text/javascript">
+		/* <![CDATA[ */
+		jQuery(function() {
+			var cache = {};
+			var lastXhr;
+			jQuery('#solrsearch').autocomplete({ 
+				delay: 500,
+				source: function(request, response) {
+					var term = request.term;
+					if (term in cache)
+					{
+						response(cache[term]); 
+						return;
+					}
+			
+					lastXhr = jQuery.getJSON("${actionurl:'solrsearch','Complete',js,op='AND',fieldName='aggregateText',limit=30,out='jquery-ui-autocomplete'}", request, function(data, status, xhr) {
+						cache[term] = data;
+						if (xhr === lastXhr)
+						{
+							response(data);
+						}
+					});
+				},
+				open: function() { jQuery('#solrsearch').autocomplete('widget').css('width', jQuery('.solrsearch-fieldset').css('width')); } 
+			});
+		});
+		/* ]]> */
+	</script>
+</tal:block>
