--- a/templates/Solrsearch-Block-Form-Success.all.all.html
+++ b/templates/Solrsearch-Block-Form-Success.all.all.html
@@ -1,8 +1,7 @@
 <form class="cmxform" tal:attributes="method configuration/getSubmitMethod" action="${formAction}">
 	<fieldset class="solrsearch-fieldset">
 		<label class="hidden" for="solrsearch">${trans:m.solrsearch.frontoffice.search-input,lab,ucf}</label>
-		<input class="textfield" type="text" id="solrsearch" name="${configuration/getModule}Param[terms]" value="${terms}" 
-			empty="${trans:m.solrsearch.frontoffice.search-button-title,ucf,attr}" />
+		<input class="textfield" type="text" id="solrsearch" name="${configuration/getModule}Param[terms]" value="${terms}" />
 		<input class="button" type="submit" name="submit" value="${trans:m.solrsearch.frontoffice.search-button-ok,ucf,attr}" />
 	</fieldset>
 </form>
