--- a/templates/Solrsearch-Block-Results-Success.all.all.html
+++ b/templates/Solrsearch-Block-Results-Success.all.all.html
@@ -1,28 +1,26 @@
 <tal:block tal:condition="not: noHits">
 	<h1 change:h="">${structure trans:m.solrsearch.frontoffice.result-title,ucf,terms=terms,count=searchResults/getTotalHitsCount}</h1>
-	<p class="normal">
-		${trans:m.solrsearch.frontoffice.sort-by,ucf,lab}
+	<dl class="inline-list normal-margin">
+		<dt>${trans:m.solrsearch.frontoffice.sort-by,ucf}</dt>
 		<tal:block tal:condition="byScore">
-			<strong>${trans:m.solrsearch.frontoffice.sort-by-score,ucf}</strong>
-			<span> | </span>
-			<a class="link" change:currentpagelink="byDateParams">${trans:m.solrsearch.frontoffice.sort-by-date,ucf}</a>
+			<dd>${trans:m.solrsearch.frontoffice.sort-by-score,ucf}<span class="separator"> | </span></dd>
+			<dd><a class="link" change:currentPageLink="byDateParams">${trans:m.solrsearch.frontoffice.sort-by-date,ucf}</a></dd>
 		</tal:block>
 		<tal:block tal:condition="not: byScore">
-			<a class="link" change:currentpagelink="byScoreParams">${trans:m.solrsearch.frontoffice.sort-by-score,ucf}</a>
-			<span> | </span>
-			<strong>${trans:m.solrsearch.frontoffice.sort-by-date,ucf}</strong>
+			<dd><a class="link" change:currentPageLink="byScoreParams">${trans:m.solrsearch.frontoffice.sort-by-score,ucf}</a><span class="separator"> | </span></dd>
+			<dd>${trans:m.solrsearch.frontoffice.sort-by-date,ucf}</dd>
 		</tal:block>
-	</p>
-	<p tal:condition="exists: documentModelFacet" class="normal">
-		<tal:block tal:repeat="facetCount documentModelFacet">
-			<a change:currentpagelink="solrsearchParam[documentModel] repeat/facetCount/key">${facetCount/getValue} (${php: number_format(facetCount.getCount(), 0, ',', ' ')})</a>
-			<span tal:condition="not: repeat/facetCount/end" > | </span>
+	</dl>
+	<dl class="inline-list normal-margin" tal:condition="hasFacet">
+		<dt>${trans:m.solrsearch.frontoffice.documentmodelfilter,ucf}</dt>
+		<tal:block tal:condition="documentModelFacet">
+			<dd tal:repeat="facetCount documentModelFacet">
+				<a change:currentPageLink="solrsearchParam[documentModel] repeat/facetCount/key">${facetCount/getValue}</a> (${php: number_format(facetCount.getCount(), 0, ',', ' ')})
+				<span tal:condition="not: repeat/facetCount/end" class="separator"> | </span>
+			</dd>
 		</tal:block>
-	</p>
-	<p tal:condition="php: isset(documentModel) && documentModel != ''" class="normal">
-		${trans:m.solrsearch.frontoffice.documentmodelfilter,ucf,lab}
-		${documentModelLabel} <span class="small">(<a change:currentpagelink="solrsearchParam[documentModel] ''" title="${trans:m.solrsearch.frontoffice.removedocumentmodelfiltertitle,ucf}">${trans:m.solrsearch.frontoffice.removedocumentmodelfilter,ucf}</a>)</span>
-	</p>
+		<dd tal:condition="php: isset(documentModel) AND documentModel NE ''">${documentModelLabel} <span class="small">(<a change:currentPageLink="solrsearchParam[documentModel] ''" title="${trans:m.solrsearch.frontoffice.removedocumentmodelfiltertitle,ucf}">${trans:m.solrsearch.frontoffice.removedocumentmodelfilter,ucf}</a>)</span></dd>
+	</dl>
 </tal:block>
 
 <p tal:condition="noHits" class="normal">
@@ -30,22 +28,20 @@
 	<em class="highlight">${terms}</em>
 </p>
 
-<p tal:condition="exists: suggestionParams/solrsearchParam" class="normal">
+<p tal:condition="suggestionParams" class="normal">
 	${trans:m.solrsearch.frontoffice.search-suggestions,ucf,lab}
-	<a class="link" change:currentpagelink="suggestionParams" tal:content="suggestionParams/solrsearchParam/terms"></a>
+	<a class="link" change:currentPageLink="suggestionParams">${suggestionParams/solrsearchParam/terms}</a>
 </p>
 
 <ol class="document-list">
-	<tal:block tal:repeat="item searchResults">
-		<li class="${php: repeat.item.odd ? 'odd' : 'even'}">
-			<h2 change:h="">
-				<img change:gauge="item/getNormalizedScore" />
-				<a change:link="document item/getDocument">${structure item/getHighlightedLabel}</a>				
-			</h2>
-			<tal:block change:include="module item/get__ITEM_MODULE; template item/get__ITEM_TEMPLATE; type 'html'; item item; showTypes configuration/getShowTypes; showDates configuration/getShowDates" />
-			<div class="cleaner"></div>
-		</li>
-	</tal:block>
+	<li tal:repeat="item searchResults" class="${alternateclass:itemIndex}">
+		<h2 change:h="">
+			<img change:gauge="item/getNormalizedScore" />
+			<a change:link="document item/getDocument">${structure item/getHighlightedLabel}</a>				
+		</h2>
+		<tal:block change:include="module item/get__ITEM_MODULE; template item/get__ITEM_TEMPLATE; type 'html'; item item; showTypes configuration/getShowTypes; showDates configuration/getShowDates" />
+		<div class="cleaner"></div>
+	</li>
 </ol>
 
 <tal:block change:paginator="paginator" />
