--- a/templates/Solrsearch-Inc-DefaultResultDetail.all.all.html
+++ b/templates/Solrsearch-Inc-DefaultResultDetail.all.all.html
@@ -5,18 +5,18 @@
 		<dd>
 			<tal:block tal:condition="item/hasTypeLabel">${item/getTypeLabel}</tal:block>
 			<tal:block tal:condition="not:item/hasTypeLabel">${php: LocaleService::getInstance().transFO(item.getDocument().getPersistentModel().getLabelKey(), array('ucf'))}</tal:block>
-			<span tal:condition="showDates"> - </span>
+			<span tal:condition="showDates" class="separator"> - </span>
 		</dd>
 	</tal:block>
 	<tal:block tal:condition="showDates">
 		<dt>${trans:m.solrsearch.frontoffice.creationdate,ucf}</dt>
-		<tal:block tal:condition="php: item.getDocument().getCreationdate() >= item.getDocument().getModificationdate()">
-			<dd><tal:block tal:replace="datetime:doc/getCreationdate,from=gmt" /></dd>
+		<tal:block tal:condition="php: item.getDocument().getCreationdate() GE item.getDocument().getModificationdate()">
+			<dd>${datetime:doc/getUICreationdate}</dd>
 		</tal:block>
-		<tal:block tal:condition="php: item.getDocument().getCreationdate() < item.getDocument().getModificationdate()">
-			<dd><tal:block tal:replace="datetime:doc/getCreationdate,from=gmt" /><span> - </span></dd>
+		<tal:block tal:condition="php: item.getDocument().getCreationdate() LT item.getDocument().getModificationdate()">
+			<dd>${datetime:doc/getUICreationdate}<span class="separator"> - </span></dd>
 			<dt>${trans:m.solrsearch.frontoffice.modificationdate,ucf}</dt>
-			<dd><tal:block tal:replace="datetime:doc/getModificationDate,from=gmt" /></dd>
+			<dd>${datetime:doc/getUIModificationDate}</dd>
 		</tal:block>
 	</tal:block>
 </dl>
