--- a/templates/Solrsearch-Block-Results-Success.all.all.html
+++ b/templates/Solrsearch-Block-Results-Success.all.all.html
@@ -4,10 +4,10 @@
 		<dt>${trans:m.solrsearch.frontoffice.sort-by,ucf}</dt>
 		<tal:block tal:condition="byScore">
 			<dd>${trans:m.solrsearch.frontoffice.sort-by-score,ucf}<span class="separator"> | </span></dd>
-			<dd><a class="link" change:currentPageLink="byDateParams">${trans:m.solrsearch.frontoffice.sort-by-date,ucf}</a></dd>
+			<dd><a class="link" change:currentpagelink="byDateParams">${trans:m.solrsearch.frontoffice.sort-by-date,ucf}</a></dd>
 		</tal:block>
 		<tal:block tal:condition="not: byScore">
-			<dd><a class="link" change:currentPageLink="byScoreParams">${trans:m.solrsearch.frontoffice.sort-by-score,ucf}</a><span class="separator"> | </span></dd>
+			<dd><a class="link" change:currentpagelink="byScoreParams">${trans:m.solrsearch.frontoffice.sort-by-score,ucf}</a><span class="separator"> | </span></dd>
 			<dd>${trans:m.solrsearch.frontoffice.sort-by-date,ucf}</dd>
 		</tal:block>
 	</dl>
@@ -15,11 +15,11 @@
 		<dt>${trans:m.solrsearch.frontoffice.documentmodelfilter,ucf}</dt>
 		<tal:block tal:condition="documentModelFacet">
 			<dd tal:repeat="facetCount documentModelFacet">
-				<a change:currentPageLink="solrsearchParam[documentModel] repeat/facetCount/key">${facetCount/getValue}</a> (${php: number_format(facetCount.getCount(), 0, ',', ' ')})
+				<a change:currentpagelink="solrsearchParam[documentModel] repeat/facetCount/key">${facetCount/getValue}</a> (${php: number_format(facetCount.getCount(), 0, ',', ' ')})
 				<span tal:condition="not: repeat/facetCount/end" class="separator"> | </span>
 			</dd>
 		</tal:block>
-		<dd tal:condition="php: isset(documentModel) AND documentModel NE ''">${documentModelLabel} <span class="small">(<a change:currentPageLink="solrsearchParam[documentModel] ''" title="${trans:m.solrsearch.frontoffice.removedocumentmodelfiltertitle,ucf}">${trans:m.solrsearch.frontoffice.removedocumentmodelfilter,ucf}</a>)</span></dd>
+		<dd tal:condition="php: isset(documentModel) AND documentModel NE ''">${documentModelLabel} <span class="small">(<a change:currentpagelink="solrsearchParam[documentModel] ''" title="${trans:m.solrsearch.frontoffice.removedocumentmodelfiltertitle,ucf}">${trans:m.solrsearch.frontoffice.removedocumentmodelfilter,ucf}</a>)</span></dd>
 	</dl>
 </tal:block>
 
@@ -30,7 +30,7 @@
 
 <p tal:condition="suggestionParams" class="normal">
 	${trans:m.solrsearch.frontoffice.search-suggestions,ucf,lab}
-	<a class="link" change:currentPageLink="suggestionParams">${suggestionParams/solrsearchParam/terms}</a>
+	<a class="link" change:currentpagelink="suggestionParams">${suggestionParams/solrsearchParam/terms}</a>
 </p>
 
 <ol class="document-list">
